# Container-Migration-Solution-Accelerator

./: .dockerignore  .flake8  README.md  TRANSPARENCY_FAQ.md  azure.yaml  azure_custom.yaml
src/backend-api/: Dockerfile  pyproject.toml  test_config.py
src/backend-api/infra/scripts/: update-configurl.ps1
src/backend-api/src/app/: main.py
src/backend-api/src/app/libs/application/: application_configuration.py
src/backend-api/src/app/libs/base/: application_base.py  fastapi_protocol.py
src/backend-api/src/app/libs/models/: messages.py
src/backend-api/src/app/libs/repositories/: file_repository.py  process_repository.py  process_status_repository.py
src/backend-api/src/app/libs/services/: auth.py  implementations.py  input_validation.py  interfaces.py
src/backend-api/src/app/routers/: http_probes.py  router_debug.py  router_files.py  router_process.py
src/backend-api/src/app/routers/models/: files.py
src/backend-api/src/app/samples/: concrete_services.py  router_one.py  router_two.py
src/backend-api/src/tests/application/: test_app_configuration.py
src/backend-api/src/tests/model/: test_model_process.py
src/processor/: Dockerfile  azure.yaml  package-lock.json  pyproject.toml
src/processor/.devcontainer/: devcontainer.json
src/processor/src/: main.py  main_service.py  sitecustomize.py
src/processor/src/libs/: __init__.py
src/processor/src/libs/agent_framework/: agent_builder.py  agent_framework_helper.py  agent_framework_settings.py  agent_info.py  agent_speaking_capture.py  azure_openai_response_retry.py  cosmos_checkpoint_storage.py  groupchat_orchestrator.py  mem0_async_memory.py  middlewares.py  qdrant_memory_store.py  shared_memory_context_provider.py
src/processor/src/libs/application/: application_configuration.py  application_context.py  service_config.py
src/processor/src/libs/azure/: app_configuration.py
src/processor/src/libs/base/: ApplicationBase.py  KernelAgent.py  agent_base.py  application_base.py  orchestrator_base.py
src/processor/src/libs/mcp_server/: MCPBlobIOTool.py  MCPDatetimeTool.py  MCPMermaidTool.py  MCPMicrosoftDocs.py  MCPYamlInventoryTool.py
src/processor/src/libs/mcp_server/blob_io_operation/: credential_util.py  mcp_blob_io_operation.py
src/processor/src/libs/mcp_server/datetime/: _debug_uv_httpx_env.py  mcp_datetime.py
src/processor/src/libs/mcp_server/mermaid/: mcp_mermaid.py
src/processor/src/libs/mcp_server/yaml_inventory/: credential_util.py  mcp_yaml_inventory.py
src/processor/src/libs/reporting/: __init__.py  migration_report_generator.py
src/processor/src/libs/reporting/models/: Processes.py  __init__.py  failure_context.py  migration_report.py
src/processor/src/plugins/mcp_server/: MCPBlobIOPlugin.py
src/processor/src/services/: control_api.py  process_control.py  queue_service.py
src/processor/src/steps/: migration_processor.py
src/processor/src/steps/analysis/agents/: prompt_aks.txt  prompt_architect.txt  prompt_eks.txt  prompt_gke.txt  prompt_onprem_k8s.txt  prompt_openshift.txt  prompt_rancher.txt  prompt_tanzu.txt
src/processor/src/steps/analysis/models/: step_output.py  step_param.py
src/processor/src/steps/analysis/orchestration/: analysis_orchestrator.py  platform_registry.json  prompt_coordinator.txt  prompt_resultgenerator.txt  prompt_task.txt
src/processor/src/steps/analysis/workflow/: analysis_executor.py
src/processor/src/steps/convert/agents/: prompt_aks_expert.txt  prompt_architect.txt  prompt_azure_architect.txt  prompt_qa_engineer.txt  prompt_yaml_expert.txt
src/processor/src/steps/convert/models/: step_output.py
src/processor/src/steps/convert/orchestration/: prompt_coordinator.txt  prompt_resultgenerator.txt  prompt_task.txt  yaml_convert_orchestrator.py
src/processor/src/steps/convert/workflow/: yaml_convert_executor.py
src/processor/src/steps/design/agents/: prompt_aks.txt  prompt_architect.txt  prompt_eks.txt  prompt_gke.txt  prompt_onprem_k8s.txt  prompt_openshift.txt  prompt_rancher.txt  prompt_tanzu.txt
src/processor/src/steps/design/models/: step_output.py
src/processor/src/steps/design/orchestration/: design_orchestrator.py  prompt_coordinator.txt  prompt_resultgenerator.txt  prompt_task.txt
src/processor/src/steps/design/workflow/: design_executor.py
src/processor/src/steps/documentation/agents/: prompt_aks_expert.txt  prompt_architect.txt  (+10 more)
src/processor/src/tests/: conftest.py  test_migration_service.py  test_plugin_context.py
src/processor/src/utils/: agent_builder.py  agent_selection_parser.py  agent_telemetry.py  console_util.py  credential_util.py  datetime_util.py  logging_utils.py  prompt_util.py  security_policy_evidence.py  tool_invocation_filter.py
(+133 files in other folders)
