[project]
name = "aks-migration-agent-gsa"
version = "0.1.0"
description = "This code it used to migrate Google GKE or Amazon EKS clusters to Azure AKS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "azure-ai-agents==1.2.0b3",
    "azure-appconfiguration==1.7.1",
    "azure-identity==1.24.0",
    "azure-monitor-opentelemetry==1.7.0",
    "azure-search-documents==11.6.0b12",
    "azure-storage-blob==12.26.0",
    "azure-storage-queue==12.13.0",
    "fastapi[standard]==0.116.1",
    "httpx==0.28.1",
    "pydantic-settings==2.10.1",
    "python-dotenv",
    "sas-cosmosdb==0.1.4",
    "semantic-kernel[azure]==1.35.3",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
