[project]
name = "aks-migration-agent-gsa"
version = "0.1.0"
description = "This code it used to migrate Google GKE or Amazon EKS clusters to Azure AKS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "azure-ai-agents==1.2.0b6",
    "azure-appconfiguration==1.8.0",
    "azure-identity==1.25.1",
    "azure-monitor-opentelemetry==1.8.5",
    "azure-search-documents==11.7.0b2",
    "azure-storage-blob==12.28.0",
    "azure-storage-queue==12.15.0",
    "fastapi[standard]==0.128.0",
    "httpx==0.28.1",
    "pydantic-settings==2.12.0",
    "python-dotenv",
    "sas-cosmosdb==0.1.4",
    "semantic-kernel[azure]==1.39.2",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
