[project]
name = "aks-migration-agent-gsa"
version = "0.1.0"
description = "This code it used to migrate Google GKE or Amazon EKS clusters to Azure AKS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "azure-ai-agents==1.2.0b6",
    "azure-appconfiguration==1.8.0",
    "azure-identity==1.25.2",
    "azure-monitor-opentelemetry==1.8.6",
    "azure-search-documents==11.7.0b2",
    "azure-storage-blob==12.28.0",
    "azure-storage-queue==12.15.0",
    "fastapi[standard]==0.135.0",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
    "python-dotenv",
    "sas-cosmosdb==0.1.5",
    "semantic-kernel[azure]==1.39.4",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-cov>=6.2.1"]
