[project]
name = "processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.3",
    "art==6.5",
    "azure-ai-agents==1.2.0b6",
    "azure-ai-inference==1.0.0b9",
    "azure-ai-projects==2.0.0b3",

    "azure-appconfiguration==1.8.0",
    "azure-identity==1.25.1",
    "azure-storage-queue==12.15.0",
    "fastmcp==2.14.4",
    "jinja2==3.1.6",
    "mcp==1.26.0",
    "openai==2.16.0",
    "psutil==7.2.2",
    "pytz==2025.2",
    "sas-cosmosdb==0.1.4",
    "semantic-kernel==1.39.2",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.8.6"]

[tool.ruff]
# Set the target Python version
target-version = "py312"

# Enable auto-fixing for all fixable rules
fix = true

# Same as VS Code's default line length
line-length = 88

[tool.ruff.lint]
# Enable commonly used rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

# Ignore specific rules that might conflict with Pylance
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':' (conflicts with black/ruff formatter)
    "F401",  # Imported but unused (when using TYPE_CHECKING)
    "F811",  # Redefined while unused (common with TYPE_CHECKING patterns)
]

# Auto-fix these specific whitespace and formatting issues
fixable = [
    "E",     # pycodestyle errors (including whitespace)
    "W",     # pycodestyle warnings (including whitespace)
    "I",     # isort (import sorting)
    "F401",  # Remove unused imports
    "UP",    # pyupgrade fixes
]

[tool.ruff.lint.isort]
# Configure import sorting to work well with your project
known-first-party = ["src"]
force-sort-within-sections = true
# Separate TYPE_CHECKING imports
split-on-trailing-comma = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Prefer double quotes for docstrings
docstring-code-format = true

# Remove trailing whitespace
skip-magic-trailing-comma = false
